cabal-version:       2.2

name:                hedgehog-webdriver
version:             0.0.1.0
synopsis:            A library for testing websites with Hedgehog
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              alexeyraga
maintainer:          alexey.raga@gmail.com
-- copyright:
category:            Testing
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Hedgehog.WebDriver
    Hedgehog.WebDriver.Commands
    Hedgehog.WebDriver.Internal.Property
    Hedgehog.WebDriver.Internal.Retry
    Hedgehog.WebDriver.Internal.Result
    Hedgehog.WebDriver.Internal.Commands
    Hedgehog.WebDriver.WebContext
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.11 && <5
    , exceptions
    , aeson <1.4
    , bytestring
    , hedgehog
    , monad-control
    , lifted-base
    , mtl
    , retry
    , stm
    , text
    , transformers-base
    , webdriver >=0.8.5

executable example
  hs-source-dirs:      example
  default-language:    Haskell2010
  main-is: Main.hs
  build-depends:
      hedgehog-webdriver
    , base >=4.11 && <5
    , bytestring
    , hedgehog
    , mtl
    , text
    , webdriver >=0.8.5
